[tool.poetry]
name = "molecule-ansible-poetry"
version = "0.1.0"
description = ""
authors = ["Jonas Hecht <jonas.hecht@codecentric.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
molecule = "^6.0.2"
molecule-plugins = {extras = ["docker"], version = "^23.5.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
